--- a/EasyRefuel/template/app/src/main/AndroidManifest.xml
+++ b/EasyRefuel/template/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
         </activity>
         <activity
             android:name=".InfoActivity"
+            android:label="@string/title_activity_info"
             android:parentActivityName=".MapsActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -67,7 +68,11 @@
         <activity
             android:name=".PrivacyActivity"
             android:label="@string/title_activity_privacy"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MapsActivity" />
+        </activity>
         <activity
             android:name=".SearchActivity"
             android:parentActivityName=".MapsActivity">
